BUG revert z-index set by bootstrap, so that other dom elements do not get overlapped by form fields

--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -378,6 +378,11 @@ input[type=month] {
   }
 }
 
+
+.input-group .form-control {
+  z-index: auto;
+}
+
 // fix vertical-align of add-ons
 .input-group-addon {
   line-height: $line-height-base;
